--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<header>
 					<h2>Welcome to Yann's GitHub page</h2>
 				</header>
-				<p>Visit Yann's personal webpage <a href="http://yannlamontagne.com">yannlamontagne.com</a>. See some projects below.
+				<p>Visit Yann's personal webpage <a href="http://yannlamontagne.com">yannlamontagne.com</a> or look the projects below.
 				<hr />
 				<div class="row">
 					<section class="6u">
